完成了个人中心功能

--- a/index.html
+++ b/index.html
@@ -27,9 +27,9 @@
               个人中心
             </a>
             <dl class="layui-nav-child">
-              <dd><a href="">基本资料</a></dd>
-              <dd><a href="">更换头像</a></dd>
-              <dd><a href="">重置密码</a></dd>
+              <dd><a href="/code/user/user_info.html" target="fm">基础资料</a></dd>
+              <dd><a href="/code/user/user_avatar.html" target="fm">更换头像</a></dd>
+              <dd><a href="/code/user/user_pwd.html" target="fm">重置密码</a></dd>
             </dl>
           </li>
           <li class="layui-nav-item" lay-header-event="menuRight" lay-unselect>
@@ -93,19 +93,19 @@
               >
               <dl class="layui-nav-child">
                 <dd>
-                  <a href="javascript:;">
+                  <a href="/code/user/user_info.html" target="fm">
                     <i class="layui-icon layui-icon-app"></i>
                     基本资料</a
                   >
                 </dd>
                 <dd>
-                  <a href="javascript:;">
+                  <a href="./user/user_avatar.html" target="fm">
                     <i class="layui-icon layui-icon-app"></i>
                     更换头像</a
                   >
                 </dd>
                 <dd>
-                  <a href="javascript:;">
+                  <a href="./user/user_pwd.html" target="fm">
                     <i class="layui-icon layui-icon-app"></i>
                     重置密码</a
                   >
