--- a/index.html
+++ b/index.html
@@ -5,11 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>后台主页</title>
     <!-- 导入layui的样式表 -->
-    <link rel="stylesheet" href="./assets/lib/layui/css/layui.css" />
+    <link rel="stylesheet" href="/assets/lib/layui/css/layui.css" />
     <!-- 导入自定义的css样式表 -->
-    <link rel="stylesheet" href="./assets/css/index.css" />
+    <link rel="stylesheet" href="/assets/css/index.css" />
     <!-- 导入阿里巴巴矢量图标库 -->
-    <link rel="stylesheet" href="./assets/fonts/iconfont.css" />
+    <link rel="stylesheet" href="/assets/fonts/iconfont.css" />
   </head>
   <body>
     <div class="layui-layout layui-layout-admin">
@@ -18,7 +18,6 @@
           <img src="./assets/images/logo.png" alt="" />
         </div>
         <!-- 头部区域（可配合layui 已有的水平导航） -->
-
         <ul class="layui-nav layui-layout-right">
           <li class="layui-nav-item layui-hide layui-show-md-inline-block">
             <a href="javascript:;" class="userinfo">
@@ -27,9 +26,15 @@
               个人中心
             </a>
             <dl class="layui-nav-child">
-              <dd><a href="/code/user/user_info.html" target="fm">基础资料</a></dd>
-              <dd><a href="/code/user/user_avatar.html" target="fm">更换头像</a></dd>
-              <dd><a href="/code/user/user_pwd.html" target="fm">重置密码</a></dd>
+              <dd>
+                <a href="/user/user_info.html" target="fm">基础资料</a>
+              </dd>
+              <dd>
+                <a href="/user/user_avatar.html" target="fm">更换头像</a>
+              </dd>
+              <dd>
+                <a href="/user/user_pwd.html" target="fm">重置密码</a>
+              </dd>
             </dl>
           </li>
           <li class="layui-nav-item" lay-header-event="menuRight" lay-unselect>
@@ -55,7 +60,7 @@
           <!-- 左侧导航区域（可配合layui已有的垂直导航） -->
           <ul class="layui-nav layui-nav-tree" lay-shrink="all">
             <li class="layui-nav-item layui-this">
-              <a class="" href="/code/home/dashboard.html" target="fm">
+              <a class="" href="/home/dashboard.html" target="fm">
                 <span class="iconfont icon-home"></span>
                 首页</a
               >
@@ -67,19 +72,19 @@
               >
               <dl class="layui-nav-child">
                 <dd>
-                  <a href="javascript:;">
+                  <a href="/article/art_cate.html" target="fm">
                     <i class="layui-icon layui-icon-app"></i>
                     文章类别</a
                   >
                 </dd>
                 <dd>
-                  <a href="javascript:;">
+                  <a href="/article/art_list.html" target="fm">
                     <i class="layui-icon layui-icon-app"></i>
                     文章列表</a
                   >
                 </dd>
                 <dd>
-                  <a href="javascript:;">
+                  <a href="/article/art_pub.html" target="fm">
                     <i class="layui-icon layui-icon-app"></i>
                     发表文章</a
                   >
@@ -93,19 +98,19 @@
               >
               <dl class="layui-nav-child">
                 <dd>
-                  <a href="/code/user/user_info.html" target="fm">
+                  <a href="/user/user_info.html" target="fm">
                     <i class="layui-icon layui-icon-app"></i>
                     基本资料</a
                   >
                 </dd>
                 <dd>
-                  <a href="./user/user_avatar.html" target="fm">
+                  <a href="/user/user_avatar.html" target="fm">
                     <i class="layui-icon layui-icon-app"></i>
                     更换头像</a
                   >
                 </dd>
                 <dd>
-                  <a href="./user/user_pwd.html" target="fm">
+                  <a href="/user/user_pwd.html" target="fm">
                     <i class="layui-icon layui-icon-app"></i>
                     重置密码</a
                   >
@@ -120,7 +125,7 @@
         <!-- 内容主体区域 -->
         <iframe
           name="fm"
-          src="/code/home/dashboard.html"
+          src="/home/dashboard.html"
           frameborder="0"
         ></iframe>
       </div>
@@ -131,12 +136,12 @@
       </div>
     </div>
     <!-- 导出layui的js文件 -->
-    <script src="./assets/lib/layui/layui.all.js"></script>
+    <script src="/assets/lib/layui/layui.all.js"></script>
     <!-- 导入jQuery文件 -->
-    <script src="./assets/lib/jquery.js"></script>
+    <script src="/assets/lib/jquery.js"></script>
     <!-- 导入自己的js 文件 -->
-    <script src="./assets/js/index.js"></script>
+    <script src="/assets/js/index.js"></script>
     <!-- 导入自己封装的baseApi -->
-    <script src="./assets/js/baseApi.js"></script>
+    <script src="/assets/js/baseApi.js"></script>
   </body>
 </html>
