--- a/login.html
+++ b/login.html
@@ -4,13 +4,13 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>大事件-登录/注册</title>
-    <link rel="stylesheet" href="./assets/lib/layui/css/layui.css" />
-    <link rel="stylesheet" href="./assets/css/login.css" />
+    <link rel="stylesheet" href="/assets/lib/layui/css/layui.css" />
+    <link rel="stylesheet" href="/assets/css/login.css" />
   </head>
   <body>
     <!-- 头部logo区域 -->
     <div class="layui-main">
-      <img src="./assets/images/logo.png" alt="" />
+      <img src="/assets/images/logo.png" alt="" />
     </div>
 
     <!-- 登录注册区域 -->
@@ -123,12 +123,12 @@
       </div>
     </div>
     <!-- 导入layui.js -->
-    <script src="./assets/lib/layui/layui.all.js" ></script>
+    <script src="/assets/lib/layui/layui.all.js" ></script>
     <!-- 导入jQuery -->
-    <script src="./assets/lib/jquery.js"></script>
+    <script src="/assets/lib/jquery.js"></script>
     <!-- 导入自己的封装的api文件 -->
-    <script src="./assets/js/baseApi.js"></script>
+    <script src="/assets/js/baseApi.js"></script>
     <!-- 导入自己的javascript文件 -->
-    <script src="./assets/js/login.js"></script>
+    <script src="/assets/js/login.js"></script>
   </body>
 </html>
