--- a/user/user_avatar.html
+++ b/user/user_avatar.html
@@ -5,13 +5,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
     <!-- 导入layui的样式表 -->
-    <link rel="stylesheet" href="/code/assets/lib/layui/css/layui.css" />
+    <link rel="stylesheet" href="/assets/lib/layui/css/layui.css" />
     <!-- 导入自定义的css样式表 -->
-    <link rel="stylesheet" href="/code/assets/css/user/user_avatar.css" />
+    <link rel="stylesheet" href="/assets/css/user/user_avatar.css" />
     <!-- 导入阿里巴巴矢量图标库 -->
-    <link rel="stylesheet" href="/code/assets/fonts/iconfont.css" />
+    <link rel="stylesheet" href="/assets/fonts/iconfont.css" />
     <!-- 导入cropper样式表 -->
-    <link rel="stylesheet" href="/code/assets/lib/cropper/cropper.css" />
+    <link rel="stylesheet" href="/assets/lib/cropper/cropper.css" />
   </head>
   <body>
     <!-- 卡片区域 -->
@@ -23,7 +23,7 @@
           <!-- 图片裁剪区域 -->
           <div class="cropper-box">
             <!-- 这个 img 标签很重要，将来会把它初始化为裁剪区域 -->
-            <img id="image" src="../assets/images/sample.jpg" />
+            <img id="image" src="/assets/images/sample.jpg" />
           </div>
           <!-- 图片的预览区域 -->
           <div class="preview-box">
@@ -50,15 +50,15 @@
       </div>
     </div>
     <!-- 导出layui的js文件 -->
-    <script src="../assets/lib/layui/layui.all.js"></script>
+    <script src="/assets/lib/layui/layui.all.js"></script>
     <!-- 导入jQuery文件 -->
-    <script src="../assets/lib/jquery.js"></script>
+    <script src="/assets/lib/jquery.js"></script>
     <!-- 导入cropper文件 -->
-    <script src="../assets/lib/cropper/Cropper.js"></script>
-    <script src="../assets/lib/cropper/jquery-cropper.js"></script>
+    <script src="/assets/lib/cropper/Cropper.js"></script>
+    <script src="/assets/lib/cropper/jquery-cropper.js"></script>
     <!-- 导入自己封装的baseApi -->
-    <script src="../assets/js/baseApi.js"></script>
+    <script src="/assets/js/baseApi.js"></script>
     <!-- 导入自己的js 文件 -->
-    <script src="../assets/js/user/user_avatar.js"></script>
+    <script src="/assets/js/user/user_avatar.js"></script>
   </body>
 </html>
