--- a/user/user_pwd.html
+++ b/user/user_pwd.html
@@ -5,11 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
     <!-- 导入layui的样式表 -->
-    <link rel="stylesheet" href="/code/assets/lib/layui/css/layui.css" />
+    <link rel="stylesheet" href="/assets/lib/layui/css/layui.css" />
     <!-- 导入自定义的css样式表 -->
-    <link rel="stylesheet" href="/code/assets/css/user/user_pwd.css" />
+    <link rel="stylesheet" href="/assets/css/user/user_pwd.css" />
     <!-- 导入阿里巴巴矢量图标库 -->
-    <link rel="stylesheet" href="/code/assets/fonts/iconfont.css" />
+    <link rel="stylesheet" href="/assets/fonts/iconfont.css" />
   </head>
   <body>
     <!-- 卡片区域 -->
@@ -81,12 +81,12 @@
       </div>
     </div>
         <!-- 导出layui的js文件 -->
-    <script src="../assets/lib/layui/layui.all.js"></script>
+    <script src="/assets/lib/layui/layui.all.js"></script>
     <!-- 导入jQuery文件 -->
-    <script src="../assets/lib/jquery.js"></script>
+    <script src="/assets/lib/jquery.js"></script>
     <!-- 导入自己封装的baseApi -->
-    <script src="../assets/js/baseApi.js"></script>
+    <script src="/assets/js/baseApi.js"></script>
     <!-- 导入自己的js 文件 -->
-    <script src="../assets/js/user/user_pwd.js"></script>
+    <script src="/assets/js/user/user_pwd.js"></script>
   </body>
 </html>
